--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tisha7353.github.io/Calendars",
+  "homepage": "https://tisha7353.github.io/Calendar",
   "name": "react-calendar-app",
   "private": true,
   "version": "0.0.0",
